checkstyle fixes